feat: Implemented PUT suscribed endpoint
